--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
+    "@types/dompurify": "^3.0.2",
+    "@types/marked": "^4.3.1",
     "@vicons/ionicons5": "^0.12.0",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.0"
+    "dompurify": "^3.0.3",
+    "highlight.js": "^11.8.0",
+    "marked": "^4.3.0",
+    "vue": "^3.3.4"
   },
   "devDependencies": {
     "@tsconfig/node18": "^2.0.1",
