Allow job to run manually

--- a/.github/workflows/build-site.yml
+++ b/.github/workflows/build-site.yml
@@ -5,6 +5,7 @@ on:
     branches: ["gh-pages", "main"]
   pull_request:
     branches: ["gh-pages"]
+  workflow_dispatch:
 
 permissions:
   contents: read
